# bevy_garage

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE  README.md  brain.json  dev.db  ios.sh  rust-toolchain.toml  wasm.sh
.cargo/: config.toml
api/: Cargo.toml
api/src/: main.rs  routes.rs
assets/: asphalt_material.wgsl  asphalt_material_ext.wgsl  asphalt_material_simple.wgsl  border-left.mtl  border-right.mtl  car-race.glb  ground_material.wgsl  ground_material_ext.wgsl  ground_material_simple.wgsl  hatchbackSports.mtl  nurburgring-gp-track.mtl  ring.mtl  road.mtl  track-polyline.mtl  track-positions.ron  track.mtl  wheelRacing.glb
camera/: Cargo.toml
camera/src/: lib.rs
car/: Cargo.toml
car/src/: car.rs  config.rs  esp.rs  joint.rs  lib.rs  res.rs  sensor.rs  spawn.rs  spec.rs  suspension.rs  wheel.rs
db_client/: .gitignore  Cargo.toml
db_client/src/: db.rs  lib.rs
dqn/: Cargo.toml
dqn/src/: dash.rs  dqn.rs  dqn_bevy.rs  gradient.rs  lib.rs  params.rs  spawn.rs
dsp/: Cargo.toml
dsp/src/: lib.rs
examples/: plane.rs
ios/: Cargo.toml  Makefile  build_rust_deps.sh
ios/bevy_garage.xcodeproj/: project.pbxproj
ios/bevy_garage.xcodeproj/xcshareddata/xcschemes/: bevy_garage.xcscheme
ios/car-sim.xcodeproj/: project.pbxproj
ios/src/: gyro.rs  lib.rs  touch.rs
light/: Cargo.toml
light/src/: lib.rs
nn/: Cargo.toml
nn/src/: api_client.rs  dash.rs  dqn.rs  dqn_bevy.rs  lib.rs  params.rs  util.rs
online/: Cargo.toml  assets
online/src/: dash.rs  main.rs
overture_maps/: Cargo.toml  README.md
overture_maps/src/: main.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
renet/: Cargo.toml  README.md
renet/src/: lib.rs
src/: api_client.rs  brain.rs  brain_dfdx.rs  camera.rs  car.rs  config.rs  dash.rs  db.rs  db_client.rs  dqn.rs  dsp.rs  ear_clipping.rs  esp.rs  font.rs  gamepad.rs  gradient.rs  graphics.rs  input.rs  input_manager.rs  joystick.rs  lib.rs  light.rs  main.rs  material.rs  mesh.rs  obj.rs  plain.rs  progress.rs  quality.rs  shader.rs  spawn.rs  track.rs  trainer.rs  util.rs
src/nn/: action.rs  api_client.rs  db.rs  dqn.rs  dqn_bevy.rs  dqn_dash_update.rs  gradient.rs  log.rs  mod.rs  params.rs  replay.rs  util.rs
src/shader/: perlin_noise_2d.wgsl  perlin_noise_3d.wgsl
src/track/: asphalt.rs  decor.rs  ground.rs  kerb.rs  material.rs  mod.rs  quality.rs  shader.rs  track.rs  wall.rs
track/: Cargo.toml
track/src/: asphalt.rs  car_track.rs  config.rs  decor.rs  ground.rs  kerb.rs  lib.rs  main.rs  material.rs  mesh.rs  perlin_noise_2d.wgsl  progress.rs  quality.rs  shader.rs  track.rs  wall.rs
trainer/: Cargo.toml
trainer/src/: gradient.rs  main.rs  nn.rs  replay.rs
wasm/: assets  index.html
xr/: Cargo.toml  android-run.sh  assets
xr/examples/: android.rs
xr/src/: camera.rs  lib.rs  main.rs
