[package]
name = "bevy_garage"
version = "0.7.0"
authors = ["Alexi Chepura <a.chepura@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gamelike car simulation playground"
[package.metadata.bundle]
identifier = "io.github.alexichepura.bevy_garage"
[workspace]
resolver = "2"
members = [
    "car",
    "track",
    "nn",
    "prisma-cli",
    "api",
    "trainer",
    "db_client",
    "ios",
    "track-convert",
    "overture_maps",
]
[profile.release]
codegen-units = 1
[features]
nn = ["dep:bevy_garage_nn"]
nn_api = ["bevy_garage_nn?/api"]
default = []
[workspace.dependencies]
bevy = { version = "0.11", features = ["jpeg"] }
bevy_garage_car = { path = "./car" }
bevy_garage_nn = { path = "./nn" }
bevy_garage_track = { path = "./track" }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", rev = "a149ff5", features = [
    "serde-serialize",
] }
dfdx = "0.11"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "sqlite-create-many",
] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
    "sqlite",
    "sqlite-create-many",
] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
[dependencies]
bevy = { workspace = true }
bevy_garage_car = { workspace = true }
bevy_garage_nn = { workspace = true, optional = true }
bevy_garage_track = { workspace = true }
bevy_rapier3d = { workspace = true }
# bevy_fundsp = { git = "https://github.com/harudagondi/bevy_fundsp" }
uuid = "1.3"
virtual_joystick = "2.0.1"
