[package]
name = "bevy_garage"
version = "0.7.0"
authors = ["Alexi Chepura <a.chepura@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gamelike car simulation playground"
[package.metadata.bundle]
identifier = "io.github.alexichepura.bevy_garage"
[workspace]
resolver = "2"
members = [
    "light",
    "camera",
    "car",
    # "dsp",
    "track",
    # "nn",
    # "prisma-cli",
    # "api",
    # "trainer",
    # "db_client",
    # "ios",
    "track-convert",
    # "overture_maps",
    # "renet",
]
[profile.release]
codegen-units = 1
[features]
# nn = ["dep:bevy_garage_nn"]
# nn_api = ["bevy_garage_nn?/api"]
# dsp = ["dep:bevy_garage_dsp"]
# virtual_joystick = ["dep:virtual_joystick"]
default = []
[workspace.dependencies]
bevy = { version = "0.14", default-features = false }
bevy_garage_camera = { path = "./camera" }
bevy_garage_car = { path = "./car", default-features = false }
# bevy_garage_dsp = { path = "./dsp" }
bevy_garage_light = { path = "./light" }
# bevy_garage_nn = { path = "./nn" }
bevy_garage_track = { path = "./track" }
bevy_rapier3d = { version = "0.27", git="https://github.com/Vrixyz/bevy_rapier", branch="rapier-0.22", features = [
    "serde-serialize",
    "dim3",
], default-features = false }
cfg-if = "1.0.0"
# dfdx = "0.13"
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
#     "sqlite",
#     "sqlite-create-many",
# ] }
# prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = [
#     "sqlite",
#     "sqlite-create-many",
# ] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = "1.3"

[dependencies]
bevy = { workspace = true, features = [
    "jpeg",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_garage_camera = { workspace = true }
# bevy_garage_dsp = { workspace = true, optional = true }
bevy_garage_light = { workspace = true }
bevy_garage_car = { workspace = true, default-features = true }
# bevy_garage_nn = { workspace = true, optional = true }
bevy_garage_track = { workspace = true }
bevy_rapier3d = { workspace = true, features = ["debug-render-3d"] }
uuid = { workspace = true }
# virtual_joystick = { version = "2.2.0", optional = true }
