[package]
name = "bevy_garage_dqn"
version = "0.1.0"
edition = "2021"

[features]
api = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json"]
default = []

[dependencies]
bevy = { workspace = true }
bevy_garage_car = { workspace = true }
bevy_rapier3d = { workspace = true }
dfdx = { workspace = true }
rand = { workspace = true }
crossbeam-channel = { version = "0.5" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
reqwest = { version = "0.11", default-features = false, features = ["json"], optional = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true }