[package]
name = "car_sim_ios"
version = "0.1.0"
edition = "2021"
description = "Car sim with bevy and rapier"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "car_sim"
crate-type = ["staticlib"]

[dependencies]
bevy = { workspace = true }
bevy_rapier_car_sim = { path = "../" }
# objc2 = { version="=0.3.0-beta.3", features=["malloc"]}
# objc2 = { git="https://github.com/madsmtm/objc2", features=["malloc"]}
objc2 = { path="../../objc2/crates/objc2", features=["malloc"]}
icrate = { path="../../objc2/crates/icrate", features=["Foundation"] }
