[package]
name = "bevy_garage_ios"
version = "0.1.0"
edition = "2021"
description = "bavy_garage ios"
publish = false
license = "MIT OR Apache-2.0"

[lib]
name = "bevy_garage_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bevy = { workspace = true, default-features = false }
bevy_garage = { path = "../", features = ["virtual_joystick"] }
bevy_garage_camera = { workspace = true }
