[package]
name = "bevy_garage_online"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_garage = { path = "../" }
bevy_garage_car = { workspace = true }
bevy_rapier3d = { workspace = true }
# bevy_overture_maps = { git = "https://github.com/alexichepura/bevy_overture_maps", rev = "7e75515" }
bevy_overture_maps = { path = "../../bevy_overture" }
