[package]
name = "bevy_garage_overture_maps"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }

bevy_garage_camera = { workspace = true }
bevy_garage_car = { workspace = true }
bevy_garage_light = { workspace = true }
bevy_rapier3d = { workspace = true, features = ["debug-render-3d"] }
bevy_overture_maps = { git = "https://github.com/alexichepura/bevy_overture_maps", rev = "a662d12" }
# bevy_overture_maps = { path = "../../bevy_overture" }
