[package]
name = "bevy_garage_renet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy = { workspace = true }
bevy_garage = { path = "../" }
bevy_garage_car = { workspace = true }
bevy_rapier3d = { workspace = true }
# bevy_renet = "0.0.9"
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e" }
serde = { workspace = true }
###
# renet_visualizer = "0.0.6"
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e", features = [
    "bevy",
] }
bevy_egui = "0.21.0"
bincode = "1.3.3"
smooth-bevy-cameras = "0.9.0"
fastrand = "2.0.0"
