[package]
name = "bevy_garage_renet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy = { workspace = true, features = [
    "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_garage_camera = { workspace = true }
bevy_garage_car = { workspace = true }
bevy_rapier3d = { workspace = true }
# bevy_renet = "0.0.9"
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e" }
serde = { workspace = true }
###
# renet_visualizer = "0.0.6"
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e", features = [
    "bevy",
] }
bevy_egui = "0.21.0"
bincode = "1.3.3"
# smooth-bevy-cameras = "0.9.0"
fastrand = "2.0.0"
