[package]
name = "bevy_garage_renet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
graphics = [
    "dep:bevy_egui",
    "dep:renet_visualizer",
    "dep:bevy_garage_camera",
    "bevy_garage_car/graphics",
    "bevy_rapier3d/debug-render-3d",
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_audio",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/vorbis",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/default_font",
    "bevy/webgl2",
]
default = ["graphics"]
headless = ["bevy_rapier3d/headless"]

[dependencies]
bevy = { workspace = true }
# bevy = { workspace = true, features = ["bevy_render"] }
bevy_egui = { version = "0.23.0", optional = true }
bevy_garage_camera = { workspace = true, optional = true }
bevy_garage_car = { workspace = true, default-features = false }
bevy_rapier3d = { workspace = true }
bevy_renet = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e" }
bincode = "1.3.3"
fastrand = "2.0.0"
serde = { workspace = true }
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", rev = "edec20e", features = [
    "bevy",
], optional = true }
bevy_time = "0.12"
