[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
db_client = { path = "../db_client" }
dfdx = { version = "0.9.0" }
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.3", default-features = false, features = ["sqlite", "sqlite-create-many"] }